--- a/style.css
+++ b/style.css
@@ -85,58 +85,54 @@ img {
 }
 
 .input__container--icon {
-    /* display: grid;
-    grid-template-columns: 1fr; */
-    position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 .input {
-    padding: 1rem 2.2rem 1rem .6rem;
+    padding: 1rem ;
     width: 100%;
     font-size: 1rem;
     border-radius: .2rem;
     border: none;
-    
-    
 }
 
 .input__email, .input__password {
     color: var(--accent-clr);
     outline: 1px solid var(--accent-clr);
+    padding: 1rem 3.5rem 1rem .5rem;
 }
 
 .input:hover, .input:focus {
     outline: 2px solid;
 }
 
-.icon {
-    font-size: 1.8rem !important;
-    z-index: 1;
-    position: absolute;
-    right: .5rem;
-    top: .6rem
-    
-}
-
-.material-symbols-rounded {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 500,
-    'GRAD' 0,
-    'opsz' 48;
-    transition: 300ms;
-    color: var(--icon-clr);
-    
+  .icon__container, .grid__input {
+    grid-column: 1/1;
+    grid-row: 1/1;
   }
 
-.material-symbols-rounded:hover {
-    font-variation-settings:
-    'FILL' 1,
-    'wght' 500,
-    'GRAD' 0,
-    'opsz' 48;
-    /* font-size: 2rem !important; */
-  }
+ .icon__container {
+   color: var(--icon-clr);
+   background-color: var(--neutral-clr);
+   width: 1.5rem;
+   aspect-ratio: 1/1;
+   outline: .15rem solid var(--icon-clr);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   z-index: 1;
+   border-radius: 50%;
+   margin: 1rem 1rem 1rem 89%;
+   font-weight: 900;
+   transition: 200ms;
+ }
+
+ .icon__container:hover {
+    background-color: var(--icon-clr);
+    color: #fff;
+    outline: 0px ;
+ }
 
 .checkbox__container {
     display: flex;
